--- a/assets/scss/_hosts.scss
+++ b/assets/scss/_hosts.scss
@@ -8,7 +8,6 @@
 
   .header {
     display: flex;
-    // padding: 0 1rem;
 
     .col {
       color: #656565;
@@ -34,7 +33,6 @@
   .valetlinks-container {
 
     .row {
-      // border-radius: 4px;
       display: flex;
       flex-wrap: wrap;
       padding: 0;
@@ -69,17 +67,7 @@
           text-transform: uppercase;
 
           em {
-            // @include gradient(lighten(#252525, 2.5%), darken(#252525, 0%), vertical);
             font-style: normal;
-            // text-align: center;
-            // border-radius: 5px 5px 0 0;
-            // background-color: #252525;
-            // box-shadow: inset 0 1px 0 0 rgba(#fff, 0.05);
-            // box-shadow: inset 0 1px 0 0 rgba(#fff, 0.05), inset -1px 0 0 0 rgba(#fff, 0.05), inset 1px 0 0 0 rgba(#fff, 0.05);
-            // display: inline-block;
-            // margin-top: 0.75rem;
-            // padding: 0.75rem 1rem;
-            // min-width: 180px;
           }
         }
 
@@ -164,6 +152,11 @@
           font-weight: 500;
           display: block;
         }
+
+        span {
+          color: #444;
+          padding-right: 0.15rem;
+        }
       }
 
       // PATH column
@@ -187,6 +180,10 @@
   .header .col {
     color: #999;
     border-color: var(--border-color-dark);
+
+    &.url span {
+      color: #656565;
+    }
   }
 
   .valetlinks-container {
