--- a/assets/scss/_main.scss
+++ b/assets/scss/_main.scss
@@ -20,6 +20,11 @@ body {
   }
 }
 
+::selection {
+  color: #fff;
+  background-color: var(--active-color);
+}
+
 a {
   color: var(--active-color);
   text-decoration: none;
@@ -68,7 +73,7 @@ img {
 .sidebar {
   flex: 0 1 100%;
   @media #{$breakpoint-lg-up} {
-    flex: 0 1 235px;
+    flex: 0 1 275px;
   }
 }
 
@@ -76,7 +81,7 @@ img {
 .content {
   flex: 0 1 100%;
   @media #{$breakpoint-lg-up} {
-    flex: 0 1 calc(100% - 235px);
+    flex: 0 1 calc(100% - 275px);
     padding-right: 2.5rem;
   }
 }
@@ -111,4 +116,112 @@ img {
 // ! links import
 pre#links-table {
   opacity: 0;
+}
+
+// ! modal
+.modal-bg {
+  background-color: var(--bg-color-dark);
+  opacity: 0;
+  position: fixed;
+  top: 0;
+  left: 0;
+  z-index: 1;
+  -webkit-backdrop-filter: blur(4px);
+  backdrop-filter: blur(4px);
+
+  &.open {
+    opacity: 0.75;
+    right: 0;
+    bottom: 0;
+    transition: opacity 0.4s ease 0.2s;
+  }
+
+  &.closing {
+    opacity: 0;
+    transition: opacity 0.5s ease 0.2s;
+  }
+}
+
+.modal {
+  border-radius: 18px;
+  background-color: var(--bg-color-dark);
+  box-shadow: 0 2px 28px 7px rgba(#000, 0.25), inset 0 0 0 1px #000;
+  opacity: 0;
+  position: fixed;
+  top: -199px;
+  left: 50%;
+  z-index: 2;
+  margin: 0 auto;
+  padding: 2rem;
+  width: 100%;
+  max-width: 480px;
+  cursor: pointer;
+  transform: translate(-50%, 0);
+  transition: all 0.5s cubic-bezier(0.16, 1, 0.3, 1);
+
+  &.open {
+    opacity: 1;
+    top: 48%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    transition: all 0.5s cubic-bezier(0.16, 1, 0.3, 1) 0.2s;
+  }
+
+  &.closing {
+    opacity: 0;
+    top: -199px;
+    transform: translate(-50%, 0);
+    transition: all 0.5s cubic-bezier(0.16, 1, 0.3, 1);
+  }
+
+  &::after {
+    content: "";
+    border-radius: 18px;
+    box-shadow: inset 0 0 0 1px rgba(#fff, 0.1);
+    position: absolute;
+    top: 1px;
+    right: 1px;
+    bottom: 1px;
+    left: 1px;
+    pointer-events: none;
+  }
+
+  h3 {
+    font-size: rem(15);
+    margin: 0;
+  }
+
+  p {
+    font-size: rem(14);
+  }
+
+  .modal-action {
+    display: flex;
+    justify-content: flex-end;
+    padding-top: 0.5rem;
+
+    button {
+      border-style: none;
+      border-radius: 3px;
+      background-color: #656565;
+      box-shadow: 0 1px 1px 0 rgba(#1a1a1a, 0.6);
+      margin-left: 16px;
+      padding: 0.43rem 1rem;
+
+      &:hover {
+        background-color: var(--active-color);
+        box-shadow: 0 1px 1px 0 rgba(#1a1a1a, 0.6);
+      }
+
+      &.clearsort {
+        background-color: #e53935;
+        box-shadow: 0 1px 1px 0 rgba(#1a1a1a, 0.6);
+
+        &:hover {
+          background-color: #c62828;
+          box-shadow: 0 1px 1px 0 rgba(#1a1a1a, 0.6);
+        }
+      }
+    }
+  }
 }
