--- a/assets/scss/_sidebar.scss
+++ b/assets/scss/_sidebar.scss
@@ -97,8 +97,8 @@
   }
 
   .server-version {
-    text-align: center;
     flex: 0 1 45%;
+    text-align: center;
   }
 }
 
@@ -122,6 +122,70 @@
     span {
       color: #757575;
       float: right;
+    }
+  }
+
+  .phpmyadmin {
+    display: flex;
+    align-items: center;
+    position: relative;
+
+    a {
+      flex: 1 1 auto;
+    }
+
+    span {
+      flex: 0 1 auto;
+      color: #757575;
+      cursor: pointer;
+
+      &:hover {
+
+        .fas {
+          color: var(--active-color);
+        }
+
+        em {
+          box-shadow: 0 1px 7px 3px rgba(0, 0, 0, 0.15);
+          opacity: 1;
+          top: -29px;
+          transition: opacity 0.3s ease-out 0.15s;
+        }
+      }
+    }
+
+    em {
+      color: #fff;
+      font-style: normal;
+      white-space: nowrap;
+      border-radius: 3px;
+      background-color: var(--active-color);
+      display: block;
+      opacity: 0;
+      position: absolute;
+      top: -9999px;
+      right: -13px;
+      z-index: 1;
+      padding: 5px 12px;
+      cursor: default;
+      pointer-events: none;
+
+      &::after {
+        content: "";
+        border-top: 8px solid var(--active-color);
+        border-right: 8px solid transparent;
+        border-left: 8px solid transparent;
+        position: absolute;
+        right: 12px;
+        bottom: -6px;
+        z-index: 2;
+        width: 0;
+        height: 0;
+      }
+    }
+
+    code {
+      font-size: rem(13);
     }
   }
 
@@ -228,8 +292,8 @@
   }
 
   .color-wrap {
-    text-align: right;
     flex-grow: 2;
+    text-align: right;
 
     #color-picker {
       border-width: 0;
@@ -272,8 +336,8 @@
   }
 
   .sortable-wrap {
-    text-align: right;
     flex-grow: 2;
+    text-align: right;
 
     button {
       color: #333;
@@ -320,14 +384,68 @@
 }
 
 .grouping-name-container {
-  border-top: 1px solid var(--border-color-darker);
-  display: flex;
-  align-items: center;
-  // opacity: 0;
+  border-top: 1px solid var(--border-color);
   margin-top: 1rem;
   padding-top: 1rem;
 
-  &.focused {
-    // opacity: 1;
+  .grouping-label {
+    flex: 0 1 100%;
+    color: #656565;
+    font-size: rem(14);
+    padding-bottom: 0.5rem;
+  }
+
+  .grouping-wrap {
+    display: flex;
+    align-items: center;
+
+    input {
+      flex: 1 1 auto;
+      color: #333;
+      font-size: rem(13);
+      border-style: none;
+      background-color: var(--bg-color);
+      margin-right: 0.5rem;
+      padding: 0.43rem 0.7rem;
+    }
+
+    button {
+      flex: 0 1 auto;
+      color: #333;
+      font-size: rem(13);
+      border-style: none;
+      border-radius: 3px;
+      background-color: #eee;
+      padding: 0.4rem 1.1rem;
+      cursor: pointer;
+      transition: all 0.3s ease;
+
+      &:hover {
+        color: #fff;
+        background-color: var(--active-color) !important;
+        transition: all 0.15s ease;
+      }
+    }
+  }
+}
+
+.dark-mode .grouping-name-container {
+  border-top-color: var(--border-color-darker);
+
+  .grouping-label {
+    color: #ccc;
+  }
+
+  .grouping-wrap {
+
+    input {
+      color: #fff;
+      background-color: #1a1a1a;
+    }
+
+    button {
+      color: #fff;
+      background-color: var(--border-color-dark);
+    }
   }
 }
