--- a/assets/scss/_sidebar.scss
+++ b/assets/scss/_sidebar.scss
@@ -346,6 +346,7 @@
       border-radius: 3px;
       background-color: #eee;
       padding: 0.4rem 0.7rem;
+      min-width: 27px;
       cursor: pointer;
       transition: all 0.3s ease;
 
@@ -385,38 +386,112 @@
 
 .grouping-name-container {
   border-top: 1px solid var(--border-color);
+  position: relative;
+  z-index: 1;
   margin-top: 1rem;
   padding-top: 1rem;
-
-  .grouping-label {
-    flex: 0 1 100%;
-    color: #656565;
-    font-size: rem(14);
-    padding-bottom: 0.5rem;
-  }
 
   .grouping-wrap {
     display: flex;
     align-items: center;
+    opacity: 1;
+    transition: opacity 0.25s ease 0.15s;
+
+    &.fadeout {
+      opacity: 0;
+      transition: opacity 0.2s ease;
+    }
+
+    .grouping-label {
+      flex: 0 1 100%;
+      color: #656565;
+      font-size: rem(14);
+    }
+
+    .expand-group-field {
+      border-radius: 3px !important;
+    }
+  }
+
+  .grouping-form {
+    background-color: #252525;
+    display: flex;
+    justify-content: flex-end;
+    align-items: center;
+    overflow: hidden;
+    position: absolute;
+    top: 0;
+    right: 0;
+    z-index: 2;
+    padding: 1rem 0 4px;
+    width: 100%;
+    transition: all 0.35s ease;
+    clip-path: inset(0 0 0 100%);
+
+    &.expand {
+      clip-path: inset(0 0 0 0);
+
+      .close-group-button {
+        top: 16px;
+      }
+    }
 
     input {
       flex: 1 1 auto;
       color: #333;
       font-size: rem(13);
       border-style: none;
+      border-radius: 3px 0 0 3px;
       background-color: var(--bg-color);
-      margin-right: 0.5rem;
-      padding: 0.43rem 0.7rem;
+      padding: 6px 0 6px 6px;
+      height: 28px;
+
+      &:focus {
+        outline: none;
+      }
     }
 
-    button {
-      flex: 0 1 auto;
+    .close-group-button {
+      font-size: 14px;
+      background-color: var(--bg-color);
+      position: absolute;
+      top: -9999px;
+      right: 47px;
+      z-index: 1;
+      width: 24px;
+      height: 28px;
+      cursor: pointer;
+
+      &::before {
+        content: "\f057";
+        font-weight: 900;
+        font-family: "Font Awesome 5 Free";
+        opacity: 0.3;
+        position: absolute;
+        top: 6px;
+        left: 5px;
+        transition: opacity 0.25s ease;
+      }
+
+      &:hover::before {
+        opacity: 0.7;
+      }
+    }
+  }
+
+  .grouping-wrap,
+  .grouping-form {
+
+    .expand-group-field,
+    .create-group-button {
+      flex: 0 1 28px;
       color: #333;
       font-size: rem(13);
       border-style: none;
-      border-radius: 3px;
+      border-radius: 0 3px 3px 0;
       background-color: #eee;
       padding: 0.4rem 1.1rem;
+      height: 28px;
       cursor: pointer;
       transition: all 0.3s ease;
 
@@ -436,16 +511,22 @@
     color: #ccc;
   }
 
-  .grouping-wrap {
+  .grouping-wrap,
+  .grouping-form {
 
     input {
       color: #fff;
       background-color: #1a1a1a;
     }
 
-    button {
+    .expand-group-field,
+    .create-group-button {
       color: #fff;
       background-color: var(--border-color-dark);
+    }
+
+    .close-group-button {
+      background-color: #1a1a1a;
     }
   }
 }
