--- a/assets/scss/_hosts.scss
+++ b/assets/scss/_hosts.scss
@@ -38,8 +38,9 @@
       padding: 0;
 
       &.group {
-        background-color: darken(#252525, 2%);
-        box-shadow: inset 0 -1px 0 0 rgba(#fff, 0.05); // bottom border
+        font-weight: 600;
+        background-color: #f7f7f7;
+        box-shadow: inset 0 1px 0 0 rgba(#111, 0.035), inset 0 -1px 0 0 rgba(#111, 0.035); // top bottom border
         // @include gradient(darken(#252525, 0), darken(#252525, 1.5%), vertical);
         // box-shadow: inset 0 -1px 0 0 rgba(0, 0, 0, 0.25); // bottom border
         position: relative;
@@ -86,7 +87,7 @@
       }
 
       &:hover {
-        background-color: #f9f9f9;
+        background-color: #f0f0f0;
 
         &.group .grip,
         &.group .remove,
@@ -188,6 +189,11 @@
 
   .valetlinks-container {
     color: #ccc;
+
+    .row.group {
+      background-color: darken(#252525, 2%);
+      box-shadow: inset 0 -1px 0 0 rgba(#fff, 0.05); // bottom border
+    }
 
     .row:hover,
     .row.ghost-class {
