--- a/assets/scss/_main.scss
+++ b/assets/scss/_main.scss
@@ -133,12 +133,12 @@ pre#links-table {
     opacity: 0.75;
     right: 0;
     bottom: 0;
-    transition: opacity 0.4s ease 0.2s;
+    transition: opacity 0.25s ease 0.1s;
   }
 
   &.closing {
     opacity: 0;
-    transition: opacity 0.5s ease 0.2s;
+    transition: opacity 0.5s ease 0.1s;
   }
 }
 
@@ -148,7 +148,8 @@ pre#links-table {
   box-shadow: 0 2px 28px 7px rgba(#000, 0.25), inset 0 0 0 1px #000;
   opacity: 0;
   position: fixed;
-  top: -199px;
+  // top: -999px;
+  top: 48%;
   left: 50%;
   z-index: 2;
   margin: 0 auto;
@@ -156,22 +157,18 @@ pre#links-table {
   width: 100%;
   max-width: 480px;
   cursor: pointer;
-  transform: translate(-50%, 0);
+  transform: translate(-50%, -50%) scale(0);
   transition: all 0.5s cubic-bezier(0.16, 1, 0.3, 1);
 
   &.open {
     opacity: 1;
-    top: 48%;
-    left: 50%;
-    transform: translate(-50%, -50%);
-    transition: all 0.5s cubic-bezier(0.16, 1, 0.3, 1) 0.2s;
+    transform: translate(-50%, -50%) scale(1);
+    transition: all 0.4s cubic-bezier(0.34, 1.56, 0.64, 1) 0.1s;
   }
 
   &.closing {
     opacity: 0;
-    top: -199px;
-    transform: translate(-50%, 0);
-    transition: all 0.5s cubic-bezier(0.16, 1, 0.3, 1);
+    transition: opacity 0.35s cubic-bezier(0.16, 1, 0.3, 1);
   }
 
   &::after {
@@ -186,6 +183,11 @@ pre#links-table {
     pointer-events: none;
   }
 
+  &.reset-list .add-group-header,
+  &.add-group .reset-sort-list {
+    display: none;
+  }
+
   h3 {
     font-size: rem(15);
     margin: 0;
@@ -193,6 +195,15 @@ pre#links-table {
 
   p {
     font-size: rem(14);
+  }
+
+  .create-group-input {
+    border: 1px solid rgba(#fff, 0.2);
+    border-radius: 3px;
+    // box-shadow: inset 0 -1px 7px 3px rgba(#000, 0.2);
+    margin: 1rem 0;
+    padding: 0.5rem;
+    width: 100%;
   }
 
   .modal-action {
