--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -739,7 +739,6 @@ pre#links-table {
 }
 .dark-mode .valetlinks-wrap .header .col {
   color: #999;
-  border-color: var(--border-color-dark);
 }
 .dark-mode .valetlinks-wrap .header .col.url span {
   color: #656565;
@@ -749,7 +748,10 @@ pre#links-table {
 }
 .dark-mode .valetlinks-wrap .valetlinks-container .row.group {
   background-color: #202020;
-  box-shadow: inset 0 -1px 0 0 rgba(255, 255, 255, 0.05);
+  box-shadow: inset 0 1px 0 0 rgba(17, 17, 17, 0.2), inset 0 -1px 0 0 rgba(255, 255, 255, 0.05);
+}
+.dark-mode .valetlinks-wrap .valetlinks-container .row.group:hover {
+  box-shadow: inset 0 1px 0 0 rgba(17, 17, 17, 0.5), inset 0 -1px 0 0 rgba(255, 255, 255, 0.025);
 }
 .dark-mode .valetlinks-wrap .valetlinks-container .row:hover,
 .dark-mode .valetlinks-wrap .valetlinks-container .row.ghost-class {
