--- a/assets/scss/_hosts.scss
+++ b/assets/scss/_hosts.scss
@@ -173,7 +173,7 @@
 
   .header .col {
     color: #999;
-    border-color: var(--border-color-dark);
+    // border-color: var(--border-color-dark);
 
     &.url span {
       color: #656565;
@@ -185,7 +185,11 @@
 
     .row.group {
       background-color: darken(#252525, 2%);
-      box-shadow: inset 0 -1px 0 0 rgba(#fff, 0.05); // bottom border
+      box-shadow: inset 0 1px 0 0 rgba(#111, 0.2), inset 0 -1px 0 0 rgba(#fff, 0.05); // top bottom border
+
+      &:hover {
+        box-shadow: inset 0 1px 0 0 rgba(#111, 0.5), inset 0 -1px 0 0 rgba(#fff, 0.025); // top bottom border
+      }
     }
 
     .row:hover,
