--- a/assets/scss/_hosts.scss
+++ b/assets/scss/_hosts.scss
@@ -35,59 +35,26 @@
     .row {
       display: flex;
       flex-wrap: wrap;
-      padding: 0;
-
-      &.group {
-        font-weight: 600;
-        background-color: #f7f7f7;
-        box-shadow: inset 0 1px 0 0 rgba(#111, 0.035), inset 0 -1px 0 0 rgba(#111, 0.035); // top bottom border
-        position: relative;
-
-        div {
-          padding: 0.65rem 0.5rem;
-        }
-
-        .grip {
-          flex: 0 1 48px;
-          background: transparent url("../img/grip-light.svg") no-repeat center center;
-          opacity: 0;
-          min-width: 48px;
-          cursor: move;
-        }
-
-        .label {
-          flex: 1 1 auto;
-          font-size: rem(14);
-          text-align: left;
-          text-transform: uppercase;
-
-          em {
-            font-style: normal;
-          }
-        }
-
-        .remove {
-          flex: 0 1 36px;
-          text-align: right;
-          opacity: 0;
-          padding-right: rem(46);
-          min-width: 36px;
-
-          .fas {
-            cursor: pointer;
-          }
-        }
-      }
+      // opacity: 1;
+      // padding: 0;
+      // max-height: 3rem;
+      // transition: all 0.1s ease;
 
       &:hover {
         background-color: #f0f0f0;
 
-        &.group .grip,
-        &.group .remove,
         .col.grip,
         .col.remove {
           opacity: 0.5;
         }
+      }
+
+      &.hide {
+        // opacity: 0;
+        // overflow: hidden;
+        // max-height: 0;
+        // transition: all 0.1s ease;
+        display: none;
       }
 
       &.ghost-class {
@@ -143,8 +110,13 @@
         min-width: calc(40% - 48px);
 
         a {
+          line-height: 1.3;
           font-weight: 500;
           display: block;
+
+          &:focus {
+            outline-style: dotted;
+          }
         }
 
         span {
@@ -182,15 +154,6 @@
 
   .valetlinks-container {
     color: #ccc;
-
-    .row.group {
-      background-color: darken(#252525, 2%);
-      box-shadow: inset 0 1px 0 0 rgba(#111, 0.2), inset 0 -1px 0 0 rgba(#fff, 0.05); // top bottom border
-
-      &:hover {
-        box-shadow: inset 0 1px 0 0 rgba(#111, 0.5), inset 0 -1px 0 0 rgba(#fff, 0.025); // top bottom border
-      }
-    }
 
     .row:hover,
     .row.ghost-class {
@@ -270,12 +233,6 @@
     }
   }
 }
-
-// dev
-// .valetlinks-container .row:nth-child(2) .col em {
-//   opacity: 1;
-//   top: -28px;
-// }
 
 // ! path tooltip - show/fade
 .valetlinks-container {
